--- a/BoutiqueEnLigne/app/views/products/index.html.erb
+++ b/BoutiqueEnLigne/app/views/products/index.html.erb
@@ -15,7 +15,7 @@
 
 
 
-<!-- cards à définir ??? Tu sauras mieux que moi faire quelque chose de joli Melwyn-->
+<!-- cards à définir ??? Tu sauras mieux que moi faire quelque chose de joli Melwyn..!!!-->
 <div class="cards"> 
 
 
