--- a/BoutiqueEnLigne/app/views/layouts/_footer.html.erb
+++ b/BoutiqueEnLigne/app/views/layouts/_footer.html.erb
@@ -2,21 +2,21 @@
 
 	<div class="footer-left">
 
-		<h3>Cutties<span>kitten</span></h3>
+		<h3>Chat<span>alors!</span></h3>
 
 		<p class="footer-links">
 
 <!-- Liens à compléter -->
 
-			<a href="https://github.com/BeeJasmine/">Jasminee</a>
+			<a href="https://github.com/BeeJasmine/">Jasmine</a>
 			·
-			<a href="https://github.com/Arnaudboy">Arnaud</a>
+			<a href="https://github.com/Arnaudboy/">Arnaud</a>
 			·
-			<a href="">Melwyn</a>
+			<a href="https://github.com/MelvynSwingler">Melwyn</a>
 			·
-			<a href="">Flora</a>
+			<a href="https://github.com/Flo464/">Flora</a>
 			·
-			<a href="">Nader</a>
+			<a href="https://github.com/narkan06110/">Nader</a>
 		</p>
 
 		<p class="footer-company-name">We love kittens</p>
