--- a/BoutiqueEnLigne/app/views/items/index.html.erb
+++ b/BoutiqueEnLigne/app/views/items/index.html.erb
@@ -1,5 +1,56 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Accueil</title>
+	</head>
 
-<%@items.each do |item|%>
-	<p> <%= item.title %> </p></br>
-<%end%>
+	<body>
+
+		<h1>Index</h1>
+<ul>
+  <% if user_signed_in? %>
+    <li>
+      <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+    </li>
+
+    <li>
+      Voici ton email : <%= current_user.email %>
+    </li>
+
+    <li>
+      <%= link_to "Edit email / password", edit_user_registration_path %>
+    </li>
+
+    <li>
+    	<%= link_to "Créer un panier", "/carts", method: :post %>
+    </li>
+
+    <li>
+    	<%= link_to "Passer commande", orders_path %>
+    </li>
+
+  <% else %>
+    <li>    
+      <%= link_to "Sign in", new_user_session_path %>
+    </li>
+
+    <li>
+      <%= link_to "Sign up", new_user_registration_path %>
+    </li>
+
+  <% end %>
+</ul>
+
+		<% @items.each do |item| %>
+			<p>
+				<%= item.title %>			
+			</p> <br>
+			<a href=" <%= item_path(item.id)%>"> Voir l'article </a>
+
+		<%end%>
+
+	</body>
+
+</html>
+
