bootstrap.css added

--- a/BoutiqueEnLigne/app/views/items/index.html.erb
+++ b/BoutiqueEnLigne/app/views/items/index.html.erb
@@ -1,5 +1,23 @@
 <h1>Hello World</h1>
 
 <%@items.each do |item|%>
-	<p> <%= item.title %> </p></br>
+	<div class="" id="card">
+		<div class="" id="image-container">
+		</div>
+		<div class="" id="cottom-container">
+			<div class= "" id="text-container">
+			<p> <%= item.title %> </p></br>
+			</div>
+			<div class="">
+			<p> <%= item.title %> </p></br>
+			<div id="buttons-container">
+				<div id="add-to-cart">
+					add to cart
+				</div>
+				<div id="show-item-page">
+					show item
+				</div>
+			</div>
+		</div>
+	</div>
 <%end%>
