--- a/BoutiqueEnLigne/app/views/devise/registrations/new.html.erb
+++ b/BoutiqueEnLigne/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,10 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<div class="col-6" id="box">
+<div class="form-inputs">
+
+
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
@@ -24,6 +28,10 @@
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
+
+</div>
+</div>
+
 <% end %>
 
 <%= render "devise/shared/links" %>
