--- a/BoutiqueEnLigne/app/views/layouts/application.html.erb
+++ b/BoutiqueEnLigne/app/views/layouts/application.html.erb
@@ -5,45 +5,26 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
+
     <header>
 <!-------------------------------Navbar--------------------------------->
  
 <nav class="navbar navbar-expand-lg navbar-light" style="background: #DE9B9B">
+    <a class="navbar-brand" href="/"><%=link_to image_tag("logo.003.jpg", alt:"")%></a>
   <div class="container">
-    <a class="Banner" href="#" Style="color: #F6F0F0"><h3>Chat Alors!</h3></a>
+    <a class="Banner" href="#" Style="color: #FFFFFF"><h3>Chat Alors!</h3></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-          <a class="nav-link" href="#" role="button">
-          Login</a>
-          <a class="nav-link" href="#" role="button">
-          Signup</a>
-          <a class="nav-link" href="#" role="button">
-          Panier</a>
-          </div>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-      <!--
-      <nav class="navbar navbar-expand-lg navbar-dark navbar-inner fixed-top">
-        <a class="navbar-brand" href="/"><img id="logo" src="./../../assets/images/Banner.svg">Banner
-        </a>
-        ajouter unn logo 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarColor01">
-          <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
               <li class="nav-item">
                 <%= link_to "Cart", user_your_cart_index_path, class: "nav-link" %>
@@ -63,8 +44,11 @@
               </li>
             <% end %>
           </ul>
-        </div>
-      </nav> -->
+      </ul>
+    </div>
+  </div>
+</nav>
+
     </header>
     <%= yield %>
     <footer class="footer-distributed">
