--- a/BoutiqueEnLigne/app/views/layouts/application.html.erb
+++ b/BoutiqueEnLigne/app/views/layouts/application.html.erb
@@ -10,41 +10,22 @@
   </head>
 
   <body>
-    <header>
+  <div class="bg"></div>
+<div class="bg bg2"></div>
+<div class="bg bg3"></div>
+
 <!-------------------------------Navbar--------------------------------->
- 
-<nav class="navbar navbar-expand-lg navbar-light" style="background: #DE9B9B">
+     
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background: #DE9B9B">
   <div class="container">
-    <a class="Banner" href="#" Style="color: #F6F0F0"><h3>Chat Alors!</h3></a>
+    <a class="Banner"><h3>Chat Alors!</h3></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-          <a class="nav-link" href="#" role="button">
-          Login</a>
-          <a class="nav-link" href="#" role="button">
-          Signup</a>
-          <a class="nav-link" href="#" role="button">
-          Panier</a>
-          </div>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-      <!--
-      <nav class="navbar navbar-expand-lg navbar-dark navbar-inner fixed-top">
-        <a class="navbar-brand" href="/"><img id="logo" src="./../../assets/images/Banner.svg">Banner
-        </a>
-        ajouter unn logo 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarColor01">
-          <ul class="navbar-nav ml-auto">
-            <% if user_signed_in? %>
+        <% if user_signed_in? %>
               <li class="nav-item">
                 <%= link_to "Cart", user_your_cart_index_path, class: "nav-link" %>
               </li>
@@ -61,12 +42,18 @@
               <li class="nav-item">
                 <%= link_to 'Log in', new_user_session_path, class: "nav-link", 'data-toggle' => "modal", 'data-target' => "#modalLogin" %>
               </li>
-            <% end %>
-          </ul>
-        </div>
-      </nav> -->
-    </header>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-------------------------------Body--------------------------------->
+
+
     <%= yield %>
+<!-------------------------------Navbar--------------------------------->
+
     <footer class="footer-distributed">
       <div class="footer-left">
         <h3>Chat<span>alors!</span></h3>
