--- a/BoutiqueEnLigne/app/views/layouts/application.html.erb
+++ b/BoutiqueEnLigne/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
      
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background: #DE9B9B">
   <div class="container">
-    <a class="Banner"><h3>Chat Alors!</h3></a>
+    <a class="navbar-brand" href="/"><%=link_to image_tag("Banner.svg", alt:"", style:"height: 20px; width: 50%")%></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
