--- a/BoutiqueEnLigne/app/views/items/index.html.erb
+++ b/BoutiqueEnLigne/app/views/items/index.html.erb
@@ -1,5 +1,4 @@
 
-<body>
     <!-- Jumbotron Header -->
     <header class="jumbotron jumbotron-fluid ">
 	<div class="container">
@@ -13,12 +12,13 @@
 
     <!-- Page Features -->
 
-	<div class="container">
+<div class="container">
+    <div class="d-flex flex-wrap">
 	<% @items.each do |item| %>
 	<div class="row text-center">
 
       <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
+        <div class="card h-100" style="width: 100%;">
           <img class="card-img-top" src=" https://placekitten.com/500/325" alt="one god damn hot cat">
           <div class="card-body">
             <h4 class="card-title"><%= item.title %></h4>
@@ -38,6 +38,6 @@
         </div>
       </div>
 	  </div>
+	  </div>
 
 	<%end%>
-	</body>
