--- a/BoutiqueEnLigne/app/views/layouts/application.html.erb
+++ b/BoutiqueEnLigne/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
      
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background: #DE9B9B">
   <div class="container">
-    <a class="navbar-brand" href="/"><%=link_to image_tag("Banner.svg", alt:"", style:"height: 20px; width: 50%")%></a>
+    <a class="navbar-brand" href="/"><%=link_to image_tag("Banner.svg", alt:"", style:"height: 60px; width: 50%"), items_path%></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -49,50 +49,52 @@
 </nav>
 
 <!-------------------------------Body--------------------------------->
-
+    <body>
+    <br/><br/><br/><br/><br/>
+    </body>
 
     <%= yield %>
 <!-------------------------------Navbar--------------------------------->
 
-    <footer class="footer-distributed">
-      <div class="footer-left">
-        <h3>Chat<span>alors!</span></h3>
-        <p class="footer-links">
-        <a href="https://github.com/BeeJasmine/">Jasmine</a> 
-        <a href="https://github.com/Arnaudboy">Arnaud</a>
-        <a href="https://github.com/MelvynSwingler">Melvyn</a>
-        <a href="">Flora</a>
-        <a href="">Vanessa</a>
-        <a href="">Lorry</a>
-		    </p>
-        <p class="footer-company-name">We love kittens</p>
-        <br>
-      </div>
+<footer class="footer-distributed align-bottom">
+  <div class="footer-left">
+    <h3>Chat<span>alors!</span></h3>
+    <p class="footer-links">
+    <a href="https://github.com/BeeJasmine/">Jasmine</a> 
+    <a href="https://github.com/Arnaudboy">Arnaud</a>
+    <a href="https://github.com/MelvynSwingler">Melvyn</a>
+    <a href="">Flora</a>
+    <a href="">Vanessa</a>
+    <a href="">Lorry</a>
+	  </p>
+    <p class="footer-company-name">We love kittens</p>
+    <br>
+  </div>
 
-	    <div class="footer-center">
-        <div>
-          <i class="fa fa-map-marker"></i>
-          <p>Nice</p>
-        </div>
-		    <div>
-			    <i class="fa fa-phone"></i>
-			    <p>+33 6 88 02 66 43</p>
-	    	</div>
-	    	<div>
-			    <i class="fa fa-envelope"></i>
-			    <p><a href="mailto:">miaou@welovecats.com</a></p>
-		    </div>
-	    </div>
-	    <div class="footer-right">
-        <p class="footer-company-about">
-          <span>About the company</span>
-        </p>
-		    <div class="footer-icons">
-          <a href=""><i class="fab fa-facebook-f"></i></a>
-          <a href=""><i class="fab fa-twitter"></i></a>
-          <a href=""><i class="fab fa-linkedin-in"></i></a>
-          <a href=""><i class="fab fa-github"></i></a>
-		    </div>
-	    </div>
-    </footer>
+	<div class="footer-center">
+    <div>
+      <i class="fa fa-map-marker"></i>
+      <p>Nice</p>
+    </div>
+	  <div>
+	    <i class="fa fa-phone"></i>
+	    <p>+33 6 88 02 66 43</p>
+		</div>
+		<div>
+	    <i class="fa fa-envelope"></i>
+	    <p><a href="mailto:">miaou@welovecats.com</a></p>
+	  </div>
+	</div>
+	<div class="footer-right">
+    <p class="footer-company-about">
+      <span>About the company</span>
+    </p>
+	  <div class="footer-icons">
+      <a href=""><i class="fab fa-facebook-f"></i></a>
+      <a href=""><i class="fab fa-twitter"></i></a>
+      <a href=""><i class="fab fa-linkedin-in"></i></a>
+      <a href=""><i class="fab fa-github"></i></a>
+	  </div>
+	</div>
+</footer>
 </html>
