--- a/BoutiqueEnLigne/app/views/devise/passwords/new.html.erb
+++ b/BoutiqueEnLigne/app/views/devise/passwords/new.html.erb
@@ -2,8 +2,9 @@
 <div class="d-flex justify-content-center p-20 align-middle">
   <div class="d-flex flex-column">
     <div class="form-box">
+    <div class="d-flex justify-content-center">
       <h2>Forgot your password?</h2>
-
+    </div>
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
 
