Debug in production environment display order index

--- a/BoutiqueEnLigne/app/views/items/index.html.erb
+++ b/BoutiqueEnLigne/app/views/items/index.html.erb
@@ -23,7 +23,7 @@
     </li>
 
     <li>
-    	<%= link_to "Créer un panier", "/carts", method: :post %>
+    	<%= link_to "Passer commande", "orders#index", method: :get %>
     </li>
 
   <% else %>
