--- a/BoutiqueEnLigne/app/views/items/index.html.erb
+++ b/BoutiqueEnLigne/app/views/items/index.html.erb
@@ -1,19 +1,10 @@
 
-    <!-- Jumbotron Header -->
-    <header class="jumbotron jumbotron-fluid ">
-	<div class="container">
-      <h1 class="d-flex justify-content-center">We sell cat pictures!</h1>
-	  <div class="d-flex justify-content-center">
-      <%= link_to 'Sign up', new_user_registration_path, class: "btn btn-primary", 'data-toggle' => "modal", 'data-target' => "#modalSignup" %>
-	  </div>
-    </div>
-	</header>
-	
+
 
     <!-- Page Features -->
 
 <div class="container">
-    <div class="d-flex flex-wrap">
+    <div class="">
 	<% @items.each do |item| %>
 	<div class="row text-center">
 
