--- a/BoutiqueEnLigne/app/views/layouts/application.html.erb
+++ b/BoutiqueEnLigne/app/views/layouts/application.html.erb
@@ -16,9 +16,9 @@
 
 <!-------------------------------Navbar--------------------------------->
      
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background: #DE9B9B">
+<nav class="navbar navbar-expand-lg fixed-top" style="background: #DE9B9B">
   <div class="container">
-    <a class="navbar-brand" href="/"><%=link_to image_tag("Banner.svg", alt:"", style:"height: 60px; width: 50%"), items_path%></a>
+    <a class="navbar-brand mr-sm-2"><%=link_to image_tag("Banner.svg", alt:"Chat Alors!", style:"height: 60px; width: 50%"), items_path%></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -26,20 +26,20 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
-              <li class="nav-item">
+              <li class="nav-button">
                 <%= link_to "Cart", user_your_cart_index_path, class: "nav-link" %>
               </li>
-              <li class="nav-item">
+              <li class="nav-button">
                 <%= link_to "Profile", user_your_cart_index_path(current_user), class: "nav-link" %>
               </li>
-              <li class="nav-item">
+              <li class="nav-button">
                 <%= link_to "Log out", destroy_user_session_path, :class => "nav-link", :method => :delete %>
               </li>   
             <% else %>
-              <li class="nav-item">
+              <li class="nav-button">
                 <%= link_to 'Sign up', new_user_registration_path, class: "nav-link", 'data-toggle' => "modal", 'data-target' => "#modalSignup" %>
               </li>
-              <li class="nav-item">
+              <li class="nav-button">
                 <%= link_to 'Log in', new_user_session_path, class: "nav-link", 'data-toggle' => "modal", 'data-target' => "#modalLogin" %>
               </li>
         <% end %>
@@ -49,9 +49,8 @@
 </nav>
 
 <!-------------------------------Body--------------------------------->
-    <body>
-    <br/><br/><br/>
-    </body>
+
+    <br/><br/><br/><br/><br/><br/>
 
     <%= yield %>
 <!-------------------------------Navbar--------------------------------->
