--- a/BoutiqueEnLigne/app/views/layouts/application.html.erb
+++ b/BoutiqueEnLigne/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
     <%= yield %>
 </body>
 <!-------------------------------Footer--------------------------------->
-<!--
+
 <footer class="page-footer font-small pt-4 style="background: #DE9B9B"">
 
   <div class="container-fluid text-center text-md-left">
@@ -120,53 +120,8 @@
  
 
   
-  <div class="footer-copyright text-center py-3">© 2019 Copyright:
-    <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+  <div class="footer-copyright text-center py-3">Made with the hacking project:
+    <a href="https://www.thehackingproject.org"> MDBootstrap.com</a>
   </div>
  
 </footer>
-
--->
-
-<footer class="page-footer footer-distributed font-small">
-  <div class="footer-left">
-    <h3>Chat<span>alors!</span></h3>
-    <p class="footer-links">
-    <a href="https://github.com/BeeJasmine/">Jasmine</a> 
-    <a href="https://github.com/Arnaudboy">Arnaud</a>
-    <a href="https://github.com/MelvynSwingler">Melvyn</a>
-    <a href="">Flora</a>
-    <a href="">Vanessa</a>
-    <a href="">Lorry</a>
-	  </p>
-    <p class="footer-company-name">We love kittens</p>
-    <br>
-  </div>
-
-	<div class="footer-center">
-    <div>
-      <i class="fa fa-map-marker"></i>
-      <p>Nice</p>
-    </div>
-	  <div>
-	    <i class="fa fa-phone"></i>
-	    <p>+33 6 88 02 66 43</p>
-		</div>
-		<div>
-	    <i class="fa fa-envelope"></i>
-	    <p><a href="mailto:">miaou@welovecats.com</a></p>
-	  </div>
-	</div>
-	<div class="footer-right">
-    <p class="footer-company-about">
-      <span>About the company</span>
-    </p>
-	  <div class="footer-icons">
-      <a href=""><i class="fab fa-facebook-f"></i></a>
-      <a href=""><i class="fab fa-twitter"></i></a>
-      <a href=""><i class="fab fa-linkedin-in"></i></a>
-      <a href=""><i class="fab fa-github"></i></a>
-	  </div>
-	</div>
-</footer>
-</html>
