--- a/BoutiqueEnLigne/app/views/items/index-cart.html
+++ b/BoutiqueEnLigne/app/views/items/index-cart.html
@@ -13,7 +13,7 @@
 
 <ul class="list-group-cart">
 	<% @items.each do |item| %>
-	<li class="list-group-item d-flex justify-content-between align-items-center list-checkout-cart">
+	<li class="d-flex flex-wrap justify-content-between align-items-center list-checkout-cart">
 
 		<div class="item-details-container">
 			<%= image_tag "#{item.image_url}", alt: "image", class: "product-image" %>
