--- a/BoutiqueEnLigne/app/views/layouts/application.html.erb
+++ b/BoutiqueEnLigne/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
       <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
               <li class="nav-button">
-                <%= link_to "Cart", user_your_cart_index_path, class: "nav-link" %>
+                <%= link_to "Cart", new_cart_path, class: "nav-link" %>
               </li>
               <li class="nav-button">
                 <%= link_to "Profile", user_your_cart_index_path(current_user), class: "nav-link" %>
